deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gitops-ecr
  name: flask-app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app-container
        image: 356791834110.dkr.ecr.us-east-2.amazonaws.com/gitops-skm-demo:18
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

      
---
apiVersion: v1
kind: Service
metadata:
  namespace: gitops-ecr
  name: flask-app-svc
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-app
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    namespace: gitops-ecr
    name: flask-app-ingress
  spec:
    ingressClassName: nginx
    rules:
    - host: gitops.bbros.xyz
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-svc
                port:
                  number: 80
