service-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: gitops-ecr
  name: flask-app-svc
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-app
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    namespace: gitops-ecr
    name: flask-app-ingress
  spec:
    ingressClassName: nginx
    rules:
    - host: gitops.bbros.xyz
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-svc
                port:
                  number: 80
